# InterfaceSensorDHT

./: .gitignore  CMakeLists.txt  README.md  qres.qrc
docs/: CMakeLists.txt
embedded/: SensorDHT.ino  embedded.ino  key_events.hpp  serialdht.cpp  serialdht.hpp  serverdht.cpp  serverdht.hpp
qml/: Home.qml  Main.qml
qml/view/: Radio.qml  Serial.qml  Server.qml
script/: index.js  package-lock.json  package.json
script/src/: index.js
src/: main.cpp
src/SearchDevice/: searchdevice.cpp  searchdevice.hpp
src/SensorDHT/: sensordht.cpp  sensordht.hpp
src/SerialCommunication/: serialcomm.cpp  serialcomm.hpp
